# QuantConnectProjectGit

./: README.md  lean.json  pyproject.toml
.cloudbees/workflows/: build.yaml
2_BuyAndHoldOptions/: test_main.py
BuyAndHoldOptions/: config.json  main.py  research.ipynb
BuyAndHoldOptions/backtests/2024-03-06_14-36-08/: 1568774034-log.txt  1568774034.json  config  data-monitor-report-20240306133757897.json  failed-data-requests-20240306133646450.txt  log.txt  succeeded-data-requests-20240306133646450.txt
BuyAndHoldOptions/backtests/2024-03-06_14-36-08/code/: GPT_Sugg.py  main.py  research.ipynb
CajonDesastre/: GraphVizGant.py
Cloneof020VolatilityRiskPremiumEffect/: config.json  main.py
CrossSectorMRVolatilityOptionTrade/: config.json  main.py
Docu/: class_examples.py
ItalianOptiosBacktesterHelper/: QuantConnect - StrategyBacktest.py  config.json  main.py
PropietaryCode/: example.py
Resources/: AlgoConfig.yaml  LabConfig.yaml  UserConfig.yaml
Scripts/: bt_handler.py  bt_launcher.py  db_operator.py
UniverseSectorMROptions/: config.json  main.py  research.ipynb
