[tool.poetry]
name = "qcpoetry"
version = "0.1.0"
description = "Simple Poetry Requirements for QC Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lean = "^1.0.185"
statsmodels = "^0.14.1"
pydevd-pycharm = "^241.14494.19"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
