[tool.poetry]
name = "qcpoetry"
version = "0.1.0"
description = "Simple Poetry Requirements for QC Project"
authors = ["Bryan Aleixo <bryan.aleixo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lean = "^1.0.185"
statsmodels = "^0.14.1"
pydevd-pycharm = "^241.14494.19"
graphviz = "^0.20.1"
plotly = "^5.23.0"
pyyaml = "^6.0.2"
google-cloud = "^0.34.0"
google = "^3.0.0"
google-cloud-bigquery = "^3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
